--- a/myGuide/app/src/main/res/layout/fragment_look_for_tutor.xml
+++ b/myGuide/app/src/main/res/layout/fragment_look_for_tutor.xml
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="20dp"
         android:minHeight="350dp"
         android:padding="20dp"
@@ -61,9 +61,11 @@
         app:cardCornerRadius="20dp"
         app:cardElevation="10dp"
         app:cardMaxElevation="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/search_tutor_toolbar">
+        app:layout_constraintTop_toBottomOf="@id/search_tutor_toolbar"
+        app:layout_constraintVertical_bias="0.0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="326dp"
@@ -86,18 +88,6 @@
                 app:layout_constraintEnd_toStartOf="@+id/textView6"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-
-<!--            <com.androidbuts.multispinnerfilter.SingleSpinnerSearch-->
-<!--                android:id="@+id/singleItemSelectionSpinner"-->
-
-<!--                android:background="@drawable/login_edit_text_border"-->
-<!--                android:minHeight="60dp"-->
-<!--                app:hintText="Select a course (required)"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintHorizontal_bias="0.158"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                app:layout_constraintTop_toBottomOf="@+id/etZipcode" />-->
 
             <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                 android:id="@+id/singleItemSelectionSpinner"
@@ -123,20 +113,20 @@
                 app:smsp_itemListHintColor="#FFFFFF"
                 app:smsp_multilineError="false"
                 app:smsp_selectedItemListColor="#40C4FF"
-                app:smsp_underlineSize="0dp"/>
+                app:smsp_underlineSize="0dp" />
 
 
             <Button
                 android:id="@+id/btnFindTutor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="32dp"
                 android:backgroundTint="#2196F3"
                 android:text="Find"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.495"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/AvailabilityTextInputLayout" />
+                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
             <EditText
                 android:id="@+id/etRangeInMiles"
@@ -237,7 +227,71 @@
                     android:textAlignment="gravity" />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <LinearLayout
+                android:id="@+id/TimeRange"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:orientation="vertical"
+                app:layout_constraintEnd_toEndOf="@+id/AvailabilityTextInputLayout"
+                app:layout_constraintTop_toBottomOf="@+id/AvailabilityTextInputLayout"
+                android:visibility="gone">
 
+                <TextView
+                    android:id="@+id/tvStartTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="12:00 PM"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textSize="16sp" />
+
+
+                <TextView
+                    android:id="@+id/tvEndTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="12:30 PM"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
+
+            <RadioGroup
+                android:id="@+id/radioGroup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:orientation="horizontal"
+                android:paddingTop="@dimen/medium_padding"
+                android:paddingBottom="@dimen/medium_padding"
+                app:layout_constraintStart_toStartOf="@+id/AvailabilityTextInputLayout"
+                app:layout_constraintTop_toBottomOf="@id/AvailabilityTextInputLayout"
+                android:visibility="gone">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Anytime" />
+
+                <RadioButton
+                    android:id="@+id/isAnytime"
+                    android:layout_width="38dp"
+                    android:layout_height="38dp"
+                    android:layout_marginLeft="20dp"
+                    android:background="@android:color/holo_green_dark" />
+
+                <RadioButton
+                    android:id="@+id/isNotAnyTime"
+                    android:layout_width="38dp"
+                    android:layout_height="38dp"
+                    android:layout_marginLeft="20dp"
+                    android:background="@android:color/holo_red_light" />
+
+
+            </RadioGroup>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
