--- a/myGuide/app/src/main/res/layout/fragment_search_result.xml
+++ b/myGuide/app/src/main/res/layout/fragment_search_result.xml
@@ -7,45 +7,31 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <ImageButton
+    <TextView
         android:id="@+id/ibGoBackSearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
+        android:layout_marginStart="-10dp"
+        android:layout_marginTop="4dp"
         android:background="@color/white"
-        android:src="?attr/actionModeCloseDrawable"
+        android:text="Back"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="30sp"
+        android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="0.222"
+        app:layout_constraintBottom_toBottomOf="@+id/tvBackImage"
+        app:layout_constraintStart_toEndOf="@id/tvBackImage"
+        app:layout_constraintTop_toTopOf="@+id/tvBackImage" />
+
+    <TextView
+        android:id="@+id/tvBackImage"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/GoBackButtonText"
+        android:textSize="26sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.cardview.widget.CardView
-
-        android:id="@+id/cardviewTitleResults"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="10dp"
-        app:cardMaxElevation="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/tvDetailedAbout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:fontFamily="serif-monospace"
-            android:text="Results"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/black"
-            android:textStyle="bold" />
-
-    </androidx.cardview.widget.CardView>
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -62,11 +48,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="70dp"
         android:backgroundTint="@color/white"
         android:text="local"
         android:textColor="@color/black"
-        app:layout_constraintEnd_toStartOf="@+id/btnOnline"
-        app:layout_constraintTop_toBottomOf="@+id/cardviewTitleResults"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="#2196F3"
         app:strokeWidth="2dp" />
 
@@ -74,11 +62,12 @@
         android:id="@+id/btnOnline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="116dp"
+        android:layout_marginStart="100dp"
         android:backgroundTint="@color/blue"
         android:text="Online"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btnLocal"
         app:strokeColor="#2196F3"
         app:strokeWidth="2dp" />
